task2/kubernetes_yamls/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: gcr.io/causal-binder-311318/flaskapp:v2
        ports:
        - containerPort: 5000
          name: flaskapp
