task2/kubernetes_yamls/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  ports:
  - port: 5000
  selector:
    app: flaskapp
